Correct spacing AboutMe Section

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ body {
   overflow-x: hidden;
 }
 
+button:hover {
+  text-shadow: 1px 1px 3px black;
+}
+
 .nav-bar {
   position: absolute;
   top: 0;
@@ -113,7 +117,6 @@ p {
   padding: 120px  24px 0 24px;
   justify-content: space-between;
   align-items: left;
-  border: 2px solid red;
 }
 
 .intro {
@@ -192,22 +195,24 @@ p {
 
 .container {
   display: grid;
-  grid-template-rows: repeat(6, 386px);
+  grid-template-rows: repeat(6, 400px);
   width: 327px;
   row-gap: 24px;
   margin-bottom: 120px;
 }
 
-.proyect1 {
+.project1 {
   grid-row: 1/2;
   grid-column: 1/2;
-  background: grey;
   display: flex;
   flex-direction: column;
   align-content: space-between;
+  padding-top: 56px;
+  background: url(images/projects/Cardworks.png) grey;
 }
 
 .projecthead {
+  order: 0;
   color: #fff;
   font-family: 'Crete Round', serif;
   font-weight: 400;
@@ -215,9 +220,11 @@ p {
   line-height: 44px;
   width: 295px;
   height: 81px;
+  padding-left: 16px;
 }
 
 .projectdesc {
+  order: 1;
   color: #fff;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
@@ -225,9 +232,11 @@ p {
   line-height: 24px;
   width: 295px;
   height: 87px;
+  padding-left: 16px;
 }
 
 .projectlist {
+  order: 2;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -236,6 +245,7 @@ p {
   gap: 12px;
   width: 236px;
   height: 40px;
+  padding-left: 16px;
 }
 
 .projectlistitem {
@@ -244,12 +254,15 @@ p {
   font-size: 15px;
   line-height: 20px;
   color: #fff;
-  width: 32px;
-  height: 20px;
+  width: auto;
+  height: auto;
+  padding: 10px 12px;
   background-color: rgba(255, 255, 255, 0.24);
+  list-style: none;
 }
 
 .projectbutton {
+  order: 3;
   width: 327px;
   height: 48px;
   background: #ff6b00;
@@ -260,40 +273,60 @@ p {
   line-height: 24px;
   letter-spacing: 0.03em;
   text-align: center;
+  border: none;
 }
 
-.proyect2 {
+.project2 {
   grid-row: 2/3;
-  background-image: url('/images/projects/Cardworks.png');
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  padding-top: 56px;
+  background: url(images/projects/Cardworks.png) grey;
 }
 
-.proyect3 {
+.project3 {
   grid-row: 3/4;
-  background-image: url('images/projects/Cardworks.png');
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  padding-top: 56px;
+  background: url(images/projects/Cardworks.png) grey;
 }
 
-.proyect4 {
+.project4 {
   grid-row: 4/5;
-  background-image: url('images/projects/Cardworks.png');
-}
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  padding-top: 56px;
+  background: url(images/projects/Cardworks.png) grey;}
 
-.proyect5 {
+.project5 {
   grid-row: 5/6;
-  background-image: url('images/projects/Cardworks.png');
-}
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  padding-top: 56px;
+  background: url(images/projects/Cardworks.png) grey;}
 
-.proyect6 {
+.project6 {
   grid-row: 6/7;
   grid-column: 1/2;
-  background-image: url(images/projects/Cardworks.png);
-  background-image: url(images/Mobile-background/Headline.png);
-
-}
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  padding-top: 56px;
+  background: url(images/projects/Cardworks.png) grey;}
 
 .aboutme {
   position: absolute;
   left: 0;
-  margin-top: 4155px;
+  margin-top: 4262px;
   width: 375px;
   height: auto;
   display: flex;
@@ -301,7 +334,6 @@ p {
   justify-content: space-between;
   align-items: left;
   padding: 120px 0;
-  border: 2px solid green;
   background-image: url(images/aboutme/Rectangle.png);
 
 }
@@ -339,13 +371,14 @@ p {
   font-size: 17px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  width: 137px;
+  width: 161px;
   height: 48px;
   background-color: #ff6b00;
   align-self: left;
   margin-left: 24px;
   margin-bottom: 120px;
   white-space: nowrap;
+  border: none;
 }
 
 .skills {
@@ -360,6 +393,8 @@ p {
   line-height: 44px;
   color: #fff;
   text-align: center;
+  display: inline-block;
+  margin-left: 10px;
 }
 
 .skilllist {
@@ -370,6 +405,7 @@ p {
   color: #fff;
   text-align: center;
   align-items: center;
+  padding-inline-start: 0;
 }
 
 .skillitem {
@@ -381,4 +417,31 @@ p {
   text-align: center;
   list-style: none;
   align-self: center;
+  padding-left: 0;
+}
+
+.diamond {
+  margin-left: 80px;
+  width: 18px;
+  height: 18px;
+  background-color: #ff6b00;
+  transform: rotate(45deg);
+  display: inline-block;
+}
+
+.square {
+  margin-left: 60px;
+  width: 18px;
+  height: 18px;
+  background-color: #ff6b00;
+  display: inline-block;
+}
+
+.circle {
+  margin-left: 120px;
+  width: 18px;
+  height: 18px;
+  border-radius: 9px;
+  background-color: #ff6b00;
+  display: inline-block;
 }
